opam-version: "2.0"
version: "0.1.1"
maintainer: "Ghiles Ziat <ghiles.ziat@epita.fr>"
authors: [
  "Ghiles Ziat"
  "Rémy Besognet El Sibaïe"
]
homepage: "https://github.com/ghilesZ/geoml"
bug-reports: "https://github.com/ghilesZ/geoml/issues"
dev-repo: "git+https://github.com/ghilesZ/geoml"
license: "MIT"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "build" "@runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune"  {>= "2.4"}
  "odoc" {with-doc}
  "alcotest" {with-test}
]

synopsis: "Geoml: 2D Geometry library for OCaml"
description: "Geoml is a 2D geometry for OCaml that provides basic euclidean geometry types (point, line, circle ...) and useful operations over those types. Computations are made using floatting point precision"
