opam-version: "2.0"
maintainer: "Ghiles Ziat <ghiles.ziat@lip6.fr>"
authors: ["Ghiles Ziat <ghiles.ziat@lip6.fr>"]
homepage: "https://github.com/ghilesZ/geoml"
bug-reports: "https://github.com/ghilesZ/geom/issues"
dev-repo: "git+https://github.com/ghilesZ/geoml"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {build}
]
synopsis: "Geoml: 2D geometry library for OCaml"
description: "Geoml is 2D geometry library for Ocaml. It focuses on euclidean geometry and provides basic types and operations over geometric shapes. All of the type representations and operations use floatting-point precision"
